--- a/calculator-app-main/index.html
+++ b/calculator-app-main/index.html
@@ -1,26 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Kaitlyn Francis">
+  <meta name="description" content="Utilize this calculator app to add, subtract, divide, or muliply inputted numbers.">
+
+  <meta name="og:title" content="Frontend Mentor | Calculator app">
+  <meta name="og:type" content="website">
+  <meta name="og:description"
+    content="Utilize this calculator app to add, subtract, divide, or muliply inputted numbers.">
+  <meta name="og:url" content="https://github.com/Kate1121/Frontend-Mentor-Calculator-App">
+  <meta name="og:image"
+    content="https://p7.hiclipart.com/preview/295/501/218/calculator-computer-icons-clip-art-calculator-thumbnail.jpg">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
+  <link rel="stylesheet" href="css/style.css">
+
   <title>Frontend Mentor | Calculator app</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(0, 0%, 100%);
+    }
   </style>
 </head>
+
 <body>
+  <header>
 
+  </header>
+  <main>
 
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </main>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </footer>
 </body>
+
 </html>
