--- a/calculator-app-main/index.html
+++ b/calculator-app-main/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="title" content="Frontend Mentor | Calculator app">
   <meta name="author" content="Kaitlyn Francis">
   <meta name="description" content="Utilize this calculator app to add, subtract, divide, or muliply inputted numbers.">
 
@@ -17,6 +18,8 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css">
 
@@ -49,72 +52,36 @@
             <option value="2" label="2">2</option>
             <option value="3" label="3">3</option>
           </datalist>
-          <input type="range" min="1" max="3" list="themes" name="theme" id="theme-slider">
+          <input type="range" min="1" max="3" list="themes" name="theme" id="themes-slider">
           <h1 id="calc">calc</h1>
-          <h3 id="theme-label">Theme</h3>
+          <h1 id="theme-label">Theme</h1>
         </div>
       </section>
       <section>
-        <form>
-          <input type="number" id="form" minlength="1">
+        <form id="form">
+          <input type="number" id="numbers">
         </form>
       </section>
       <section>
         <div class="keypad">
-          <div class="button">
-            <button id="seven" value="7">7</button>
-          </div>
-          <div class="button">
-            <button id="eight" value="8">8</button>
-          </div>
-          <div class="button">
-            <button id="nine" value="9">9</button>
-          </div>
-          <div class="button">
-            <button id="del">DEL</button>
-          </div>
-          <div class="button">
-            <button id="four" value="4">4</button>
-          </div>
-          <div class="button">
-            <button id="five" value="5">5</button>
-          </div>
-          <div class="button">
-            <button id="six" value="6">6</button>
-          </div>
-          <div class="button">
-            <button id="plus">+</button>
-          </div>
-          <div class="button">
-            <button id="one" value="1">1</button>
-          </div>
-          <div class="button">
-            <button id="two" value="2">2</button>
-          </div>
-          <div class="button">
-            <button id="three" value="3">3</button>
-          </div>
-          <div class="button">
-            <button id="minus">-</button>
-          </div>
-          <div class="button">
-            <button id="period">.</button>
-          </div>
-          <div class="button">
-            <button id="zero" value="0">0</button>
-          </div>
-          <div class="button">
-            <button id="divide">/</button>
-          </div>
-          <div class="button">
-            <button id="multiply">x</button>
-          </div>
-          <div class="button">
-            <button id="reset">Reset</button>
-          </div>
-          <div class="button">
-            <button id="seven">=</button>
-          </div>
+          <button id="seven" value="7">7</button>
+          <button id="eight" value="8">8</button>
+          <button id="nine" value="9">9</button>
+          <button id="del">DEL</button>
+          <button id="four" value="4">4</button>
+          <button id="five" value="5">5</button>
+          <button id="six" value="6">6</button>
+          <button id="plus">+</button>
+          <button id="one" value="1">1</button>
+          <button id="two" value="2">2</button>
+          <button id="three" value="3">3</button>
+          <button id="minus">-</button>
+          <button id="period">.</button>
+          <button id="zero" value="0">0</button>
+          <button id="divide">/</button>
+          <button id="multiply">x</button>
+          <button id="reset">Reset</button>
+          <button id="equals">=</button>
         </div>
       </section>
     </article>
